Sizing and alignment fixes

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,14 +1,15 @@
 *
 /*Background Format*/
 
-body
+html, body
 {
 	margin: 0 0;
-	height: 100%;
+	min-height: 100%;
 	width: 100%;
 	background-size: cover;
 	background-position: center;
 	background: linear-gradient(rgba(17,17,17,0.9), rgba(17,17,17,0.9)) , url(../images/background.jpg) no-repeat;
+    text-align: center;
 }
 
 /*Navigation Bar*/
@@ -82,14 +83,22 @@ header
 
 /*Content*/
 
+.container
+{
+    height: 100vh;
+    margin-bottom: -35px;
+}
+
 .content
 {
 	vertical-align: top;
 	max-width: 1400px;
-	height: 100%;
+	min-height: 90vh;
+    margin-bottom: -28px;
 	margin: 5px auto;
 	text-align: center;
 	background-color: rgba(17,17,17,0.7);
+    border-radius: 5px 5px;
 }
 
 .missions
@@ -97,8 +106,8 @@ header
 	vertical-align: top;
 	display: inline-block;
 	min-width: 250px;
+    min-height: 500px;
 	height: auto;
-	min-height: 500px;
 	margin: 5px 5px;
 	font-family: "Roboto", sans-serif;
 	font-size: 18px;
@@ -119,7 +128,10 @@ header
 
 Footer
 {
-	text-align: center;
+    display: inline-block;
+    bottom: 0;
+    height: 25px;
+    text-align: center;
 	color: white;
 	font-family: "Roboto", sans-serif;
 	font-size: 14px;
